--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
       <div class="row">
         <div class = "panel-group">
           <div class="panel panel-default">
-            <div class="panel-heading"> Home </div>
+            <div class="panel-heading">Home</div>
           </div>
           <div class="panel panel-default">
-            <div class ="panel-body"> input </div>
+            <div class ="panel-body">input</div>
           </div>
           <div class="panel panel-default">
-            <div class ="panel-body"> avatar the master of all sex positions. </div>
+            <div class="panel-body">Description placeholder</div>
           </div>
         </div>
       </div>
