--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
               </p>
 
               <p>
-                  <button v-on:click="app.manual">Manual Entry</button>
-                  <button v-on:click="app.GPS">GPS Entry</button>
+                  <button v-on:click="addReports.manual">Manual Entry</button>
+                  <button v-on:click="addReports.GPS">GPS Entry</button>
               </p>
 
             </div>
@@ -96,8 +96,8 @@
                      reports.ethReports.push({longitude: addReports.x, latitude: addReports.y});
                  },
                  manual: function(){
-                     if(app.alongitude != null && app.alatitude != null)
-                     reports.ethReports.push({longitude: app.alongitude, latitude: app.alatitude});
+                     if(addReports.alongitude != null && addReports.alatitude != null)
+                     reports.ethReports.push({longitude: addReports.alongitude, latitude: addReports.alatitude});
                  }
                 }
             })
