--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
         
         <div class="container">
             <div id="reports">
+                <h2>Reports <small>Alpha 0.0.1</small></h2>
                 <ol>
                     <li v-for="report in ethReports">
                         {{ report.longitude }} | {{ report.latitude }}
                     </li>
                 </ol>
             </div>
-
+                <hr>
                 <div class="container" id="app">
+                    
 
                   <p>
                     <label for="name">Longitude: <label>
