--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                      }
                  },
                  register: function(){
-                     contract.register(alongitude, alatitude, {value: 0, gas: 10000}, function(err, result){
-                         if(!error){
+                     contract.register(alongitude, alatitude, {value: 0, gas: 15000}, function(err, result){
+                         if(!err){
                              console.log(result)
                          }
                      });
