--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 reportEvent.get((error, logs) => {
                   // Logs Retrieved
                   logs.forEach(function(){
-                    reports.ethReports.push({log.args})   
+                    reports.ethReports.push(log.args)   
                   })
                 })
             
