--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                       
                       var lat = master[i].args._latitude.c[0]
                       var long = master[i].args._longitude.c[0]
-                      reports.ethReports.push({latitude: lat, longitude: long})
+                      reports.ethReports.push({longitude: long, latitude: lat })
                       
                   }
                 })
