--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <div id="reports">
                 <h2>Reports <small>Alpha 0.0.2</small></h2>
                 <ul style="list-style: none;">
-                    <li style="border: 1px solid #ccc; padding: 10px; color: #fff; font-weight: 800" v-for="report in ethReports">
-                        <img v-bind:src="'https://maps.googleapis.com/maps/api/staticmap?center='
+                    <li style="border: 1px solid #ccc; padding: 10px; color: #000; font-weight: 800" v-for="report in ethReports">
+                        <center><img v-bind:src="'https://maps.googleapis.com/maps/api/staticmap?center='
     +report.latlon+'&zoom=18&size=400x300&key=AIzaSyBybZ0KgytdPJ1euNw8DAsXAjecqRQYFW0'" />
-                        ({{ report.longitude }},{{ report.latitude }})
+                            ({{ report.longitude }},{{ report.latitude }})</center>
                     </li>
                 </ul>
             </div>
