--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div id="reports">
                 <h2>Reports <small>Alpha 1.0.1</small></h2>
                 <ul style="list-style: none;">
-                    <li style="border: 1px solid #ccc; padding: 10px; color: #000; font-weight: 800" v-for="report in ethReports">
+                    <li style="border: 1px solid #ccc; padding: 10px; color: #000; font-weight: 800" v-for="report in ethReports.reverse()">
                         <center><img v-bind:src="'https://maps.googleapis.com/maps/api/staticmap?center='
     +report.latlon+'&zoom=12&size=400x300&key=AIzaSyBybZ0KgytdPJ1euNw8DAsXAjecqRQYFW0'" /></center>
                     </li>
