--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Web3 Testbed</title>
+        <title>Skynet Reports Application</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
-        
+        <script>
              window.addEventListener("load", function() {
                 // Checking if Web3 has been injected by the browser (Mist/MetaMask)
                 if (typeof web3 !== "undefined") {
@@ -17,6 +17,7 @@
                   );
                 }
           })
+        </script>
     </head>
     <body>
         
