--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
         <div class="container">
             <div id="reports">
-                <h2>Reports <small>Alpha 1.0.1</small></h2>
+                <h2>Reports <small>Alpha</small></h2>
                 <ul style="list-style: none;">
                     <li style="border: 1px solid #ccc; padding: 10px; color: #000; font-weight: 800" v-for="report in ethReports.reverse()">
                         <center><img v-bind:src="'https://maps.googleapis.com/maps/api/staticmap?center='
