--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,14 @@
         padding: 0;
       }
     </style>
+	  
+	  <!-- Le Javascript -->
+        <script src="https://cdn.jsdelivr.net/npm/web3@0.19.0/dist/web3.min.js"></script>
+                
+        <!-- Other Custom Javascript -->
+        <script src="./js/scripts.js"></script>
+        <script src="./js/abi.js"></script>
+	  
   </head>
   <body>
     <div id="map"></div>
